[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"
py_version = 38

[tool.poetry]
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Utilities"
]
description = "Ultra simple module for creating local scopes in Python"
documentation = "https://eertmans.be/varscope"
exclude = ["docs/", "static/"]
homepage = "https://github.com/jeertmans/varscope"
keywords = ["scope", "python"]
license = "MIT"
name = "varscope"
packages = [
  {include = "varscope"}
]
readme = "README.md"
repository = "https://github.com/jeertmans/varscope"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.8"
ipython = {version = ">=8", optional = true}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
bump2version = "^1.0.1"
isort = "^5.12.0"
mypy = "^0.991"
pre-commit = "^3.0.2"
ruff = "^0.0.219"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2023.5.20"
myst-parser = ">=2"
sphinx = ">7"
sphinx-autodoc-typehints = "^1.23.2"
sphinx-click = "^4.4.0"
sphinx-copybutton = "^0.5.1"
sphinxext-opengraph = "^0.7.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
byexample = "^10.5.6"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.ruff]
ignore = [
  "E501"
]
target-version = "py38"
